# Projeto_Haskell

./: .env.example  .gitignore  CHANGELOG.md  README.md  cabal.project  docker-compose.yml  projetoHaskell.cabal
app/: Main.hs
app/Server/: Routes.hs
src/: Server.hs
src/API/: Routes.hs  Types.hs
src/App/: Env.hs  Monad.hs
src/Config/: AppConfig.hs
src/Database/: Pool.hs  Schema.hs
src/Domain/: Diagnostic.hs  Exercise.hs  Module.hs  Password.hs  Permissions.hs  Progress.hs  Roadmap.hs  Types.hs
src/Handlers/: Auth.hs  Diagnostic.hs  Exercise.hs  Lesson.hs  Module.hs  Progress.hs  Roadmap.hs
src/Repositories/: DiagnosticRepo.hs  ExerciseRepo.hs  LessonRepo.hs  ModuleRepo.hs  ProgressRepo.hs  UserRepo.hs
src/Services/: AuthService.hs  DiagnosticService.hs  ExerciseService.hs  LessonService.hs  ModuleService.hs  PermissionService.hs  ProgressService.hs  RoadmapService.hs
sympy_service/: README.md  pyproject.toml  requirements.txt
sympy_service/app/: main.py  routes.py  schemas.py  sympy_ops.py
sympy_service/tests/: test_derivative.py  test_evaluate.py  test_integral.py  test_simplify.py
test/Unit/Domain/: DiagnosticSpec.hs  ExerciseSpec.hs  ModuleSpec.hs  PasswordSpec.hs  PermissionsSpec.hs  ProgressSpec.hs  RoadmapSpec.hs
test/Unit/Services/: AuthServiceSpec.hs
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/cas/: page.tsx
web/src/app/diagnostic/: page.tsx
web/src/app/lessons/[id]/: page.tsx
web/src/app/lessons/[id]/exercises/new/: page.tsx
web/src/app/login/: page.tsx
web/src/app/modules/: page.tsx
web/src/app/modules/[id]/: page.tsx
web/src/app/modules/[id]/lessons/new/: page.tsx
web/src/app/modules/new/: page.tsx
web/src/app/progress/: page.tsx
web/src/app/register/: page.tsx
web/src/app/roadmap/: page.tsx
web/src/components/: LessonContent.tsx  Nav.tsx
web/src/components/visualizers/: DerivativeViz.tsx  FunctionViz.tsx  IntegralViz.tsx  LimitViz.tsx  VizCard.tsx  index.ts
web/src/lib/: api.ts  cas.ts  mathExpr.ts  shortcode.ts  useUser.ts
