cabal-version:      3.0
name:               projetoHaskell
version:            0.1.0.0
license:            BSD-3-Clause
author:             João Vitor Vale
maintainer:         joaovitorvalec@gmail.com
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable projetoHaskell
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    other-modules:    Server.Routes
    build-depends:    base,
                      servant,
                      servant-server,
                      warp,
                      wai,
                      text
    hs-source-dirs:   app
    default-language: Haskell2010
