[project]
name = "sympy_service"
version = "0.1.0"
description = "Microservico de calculo simbolico via SymPy para o Calculo para Devs"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sympy>=1.12",
    "pydantic>=2",
]

[project.optional-dependencies]
dev = ["pytest>=8", "httpx>=0.27"]

[tool.pytest.ini_options]
testpaths = ["tests"]
